# com.webos.service.camera

./: .clang-format  .gitignore  CMakeLists.txt  clang-format-per-commit.sh  clang-format.sh  groups  project.config
files/sysbus/: com.webos.service.camera.api.json.in  com.webos.service.camera.perm.json.in  com.webos.service.camera.role.json.in  sdk_test_app.service.in  (+11 more)
src/common/: CMakeLists.txt
src/common/camera/: camera_types.cpp
src/common/include/public/camera/: ipc_posix_shared_memory.h  ipc_shared_memory.h  luna_client.h
src/common/ipc/: LunaClient.h  Process.cpp
src/common/lib/: CMakeLists.txt  camera_utils_log.h  ipc_posix_shared_memory.cpp  ipc_shared_memory.cpp  luna_client.cpp
src/common/shm/: cam_posixshm.cpp  cam_posixshm.h  camshm.cpp
src/hal/: CMakeLists.txt  camera_base.h  camera_base_wrapper.cpp  camera_base_wrapper.h  camera_hal_if.cpp  hal.cpp
src/hal/alsa/: hal_alsa.cpp  hal_alsa.h
src/hal/remote/: remote_camera_plugin.cpp  remote_camera_plugin.h
src/hal/utils/: camshm.cpp  camshm.h
src/hal/v4l2/: camshm_0-cpy.cpp  camshm_0-cpy.h  hal_v4l2.cpp  hal_v4l2.h  usrptr_handle.cpp  usrptr_handle.h  v4l2_camera_plugin.cpp  v4l2_camera_plugin.h
src/libs/: CMakeLists.txt
src/libs/camera_shared_memory/: CMakeLists.txt  camera_shared_memory.cpp  camera_shared_memory_ex.cpp  camera_shared_memory_impl.cpp  camera_shared_memory_impl.h
src/libs/include/private/: camera_shared_memory_ex.h
src/libs/include/public/camera/: camera_shared_memory.h
src/libs/luna_client/: CMakeLists.txt  luna_client.cpp
src/plugins/hal/remote/: CMakeLists.txt  remote_camera_plugin.cpp
src/plugins/notifier/pdm/: CMakeLists.txt  pdm_client.cpp  pdm_client.h
src/plugins/solution/face_detection_aif/: CMakeLists.txt  face_detection_aif.cpp  face_detection_aif.hpp
src/service2/: CMakeLists.txt  camera_service.cpp  camera_service.h  command_manager.cpp  command_manager.h  device_controller.cpp  device_controller.h  device_manager.cpp  device_manager.h  json_parser.cpp  json_parser.h  json_schema.h  json_utils.h  service_types.cpp  service_types.h  virtual_device_manager.cpp  virtual_device_manager.h
src/service2/notifier/: device_notifier.h  notifier.cpp  notifier.h
src/service2/notifier/pdm/: pdm_client.cpp  pdm_client.h  pdm_client_constants.h
src/services/: CMakeLists.txt
src/services/camera/: CMakeLists.txt  CameraHalProxy.cpp  CameraHalProxy.h  camera_hal_proxy.cpp  camera_hal_proxy.h  camera_service.cpp  camera_service.h  camera_types.cpp  command_manager.cpp  command_manager.h  device_manager.cpp  device_manager.h  event_notification.cpp  event_notification.h  json_parser.cpp  json_parser.h  json_schema.h  json_utils.h  preview_display_control.cpp  preview_display_control.h  virtual_device_manager.cpp  virtual_device_manager.h  whitelist_checker.cpp  whitelist_checker.h
src/services/camera/addon/: addon.cpp  addon.h
src/services/camera/notifier/: notifier.cpp  notifier.h
src/services/common/: camera_types.cpp  process.cpp
src/services/control/: camshm.cpp  camshm.h  device_controller.cpp  device_controller.h
src/services/control/hal/: camera_base_wrapper.cpp  camera_base_wrapper.h  camera_hal_if.cpp
src/services/control/proxy/: CameraHalProxy.cpp  CameraHalProxy.h  GenerateUniqueID.h  LunaClient.cpp
src/services/control/service/: CMakeLists.txt  CameraHalService.cpp  CameraHalService.h
src/services/control/service/files/sysbus/: com.webos.camerahal.api.json  com.webos.camerahal.role.json.in
src/services/hal/: CMakeLists.txt  CameraHalService.cpp  CameraHalService.h  CameraSolutionProxy.cpp  CameraSolutionProxy.h  camera_hal_service.cpp  camera_hal_service.h  camera_solution_manager.cpp  camera_solution_manager.h  camera_solution_proxy.cpp  camera_solution_proxy.h  device_controller.cpp  device_controller.h  storage_monitor.cpp  storage_monitor.h
src/services/hal/files/: CMakeLists.txt
src/services/hal/files/sysbus/: com.webos.camerahal.api.json  com.webos.camerahal.groups.json  com.webos.camerahal.perm.json  com.webos.camerahal.role.json.in  com.webos.camerahal.service.in
src/services/hal/files/sysbus_new/: camerahal.manifest.json.in  com.webos.camerahal.api.json  com.webos.camerahal.perm.json
src/services/hal/hal_if/: CMakeLists.txt  camera_base_wrapper.cpp  camera_base_wrapper.h  camera_hal_if.cpp  camera_hal_if_types.h
src/services/solution/: CMakeLists.txt  CameraSolutionService.cpp  CameraSolutionService.h  camera_solution.cpp  camera_solution_async.cpp  camera_solution_manager.cpp  camera_solution_service.cpp  camera_solution_service.h  error_manager.cpp  error_manager.h
src/services/solution/files/: CMakeLists.txt
src/services/solution/files/sysbus/: com.webos.camerasolution.api.json  com.webos.camerasolution.role.json.in  com.webos.camerasolution.service.in
src/services/solution/files/sysbus_new/: camerasolution.manifest.json.in  com.webos.camerasolution.groups.json  com.webos.camerasolution.perm.json
src/services/solution/lib/: CMakeLists.txt  camera_solution.cpp  camera_solution_async.cpp
src/services/solution/proxy/: CameraSolutionProxy.cpp
src/services/solution/service/: CMakeLists.txt  CameraSolutionService.cpp  CameraSolutionService.h
src/services/solution/service/files/sysbus/: com.webos.camerasolution.perm.json
test_smsync/: CMakeLists.txt
test_smsync/src/: camsrv_smsync_test_main.cpp  camsrv_smsync_use_case.h  cmdpipeio.h  jsonparse.h
tests/: CMakeLists.txt
tests/test-app/: CMakeLists.txt
tests/test-app/camera-plugin-inspect/: CMakeLists.txt  camera_plugin_inspect.cpp
tests/test-app/cameraservice/: CMakeLists.txt  camera_service_test.cpp
tests/test-app/hal/: CMakeLists.txt  camera_hal_tests.cpp
tests/test-app/test_smsync/: CMakeLists.txt
tests/test-app/test_smsync/src/: camsrv_smsync_test_main.cpp  camsrv_smsync_use_case.cpp  camsrv_smsync_use_case.h  camsrv_smsync_use_case_runner.cpp  camsrv_smsync_use_case_runner.h  cmdpipeio.h  jsonparse.cpp
tests/test-app/test_sync_read/: CMakeLists.txt
tests/test-app/test_sync_read/src/: ipcshm_func.cpp  ipcshm_func.h  sync_read_test.cpp
(+188 files in other folders)
